--- a/ec-gpu/Cargo.toml
+++ b/ec-gpu/Cargo.toml
@@ -9,3 +9,6 @@ repository = "https://github.com/filecoin-project/ff-cl-gen"
 license = "MIT/Apache-2.0"
 
 [dependencies]
+ark-bls12-381 = "0.4.0"
+ark-ff = "0.4.0"
+ark-ec = "0.4.0"
