--- a/gpu-ark-tests/Cargo.toml
+++ b/gpu-ark-tests/Cargo.toml
@@ -2,7 +2,7 @@
 # https://github.com/zkcrypto/group/pull/29 is fixed. Then we won't need the exports of `Fp` and
 # `Fp2` any more.
 [package]
-name = "gpu-tests"
+name = "gpu-ark-tests"
 version = "0.1.0"
 edition = "2021"
 description = "Test for the ec-gpu project"
@@ -12,26 +12,28 @@ license = "MIT/Apache-2.0"
 publish = false
 
 [dev-dependencies]
-blstrs = { version = "0.7.0", features = ["__private_bench"] }
 criterion = "0.4"
-ec-gpu = "0.2"
+ec-gpu = { path = "../ec-gpu", default-features = false }
 ec-gpu-gen = { path = "../ec-gpu-gen", default-features = false }
-ff = { version = "0.13.0", default-features = false }
+ark-ff = "0.4.0"
+ark-ec = "0.4.0"
+ark-std = "0.4.0"
 fil_logger = "0.1.6"
-group = "0.13.0"
-pairing = "0.23.0"
 rand = "0.8"
 rayon = "1.5.3"
+ark-bls12-381 = "0.4.0"
+ark-bn254 = "0.4.0"
 
 [build-dependencies]
-blstrs = { version = "0.7.0", features = ["__private_bench"] }
 ec-gpu-gen = { path = "../ec-gpu-gen" }
+ark-bls12-381 = "0.4.0"
+ark-bn254 = "0.4.0"
 
 [features]
 default = ["cuda", "opencl"]
-cuda = ["blstrs/gpu", "ec-gpu-gen/cuda"]
-opencl = ["blstrs/gpu", "ec-gpu-gen/opencl"]
+cuda = ["ec-gpu-gen/cuda"]
+opencl = ["ec-gpu-gen/opencl"]
 
-[[bench]]
-name = "multiexp"
-harness = false
+# [[bench]]
+# name = "multiexp"
+# harness = false
