--- a/ec-gpu-gen/Cargo.toml
+++ b/ec-gpu-gen/Cargo.toml
@@ -36,6 +36,7 @@ yastl = "0.1.2"
 #blstrs = { version = "0.6.0", features = ["__private_bench"], optional = true }
 #blstrs = { version = "0.7.0", features = ["__private_bench", "gpu"] }
 ark-bls12-381 = "0.4.0"
+ark-bn254 = "0.4.0"
 rand = "0.8"
 lazy_static = "1.2"
 #pairing = "0.23.0"
