--- a/gpu-ark-tests/Cargo.toml
+++ b/gpu-ark-tests/Cargo.toml
@@ -18,6 +18,7 @@ ec-gpu-gen = { path = "../ec-gpu-gen", default-features = false }
 ark-ff = "0.4.0"
 ark-ec = "0.4.0"
 ark-std = "0.4.0"
+ark-poly = { version = "0.4.0", features = ["parallel"] }
 fil_logger = "0.1.6"
 rand = "0.8"
 rayon = "1.5.3"
