--- a/ag-cuda-ec/Cargo.toml
+++ b/ag-cuda-ec/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 ag-cuda-proxy = { workspace = true }
 rustacuda = { workspace = true }
 ag-types = { workspace = true }
+ag-cuda-workspace-macro = { workspace = true }
 
 ark-bls12-381 = "0.4.0"
 ark-bn254 = "0.4.0"
@@ -21,6 +22,7 @@ once_cell = "1.19"
 [dev-dependencies]
 ark-poly = { version = "0.4.0", features = ["parallel"] }
 ag-cuda-proxy = { workspace = true }
+rayon = "*"
 
 
 [build-dependencies]
