--- a/ag-cuda-proxy/Cargo.toml
+++ b/ag-cuda-proxy/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 rustacuda = { workspace = true }
 ag-types = { workspace = true }
+once_cell = "1.19"
 
 [features]
 default = []
