--- a/ag-cuda-ec/Cargo.toml
+++ b/ag-cuda-ec/Cargo.toml
@@ -21,6 +21,7 @@ once_cell = "1.19"
 
 [dev-dependencies]
 ark-poly = { version = "0.4.0", features = ["parallel"] }
+ark-ec = { version = "0.4.2", features = ["parallel"] }
 ag-cuda-proxy = { workspace = true }
 rayon = "*"
 
