--- a/ag-cuda-ec/Cargo.toml
+++ b/ag-cuda-ec/Cargo.toml
@@ -10,22 +10,41 @@ ag-cuda-proxy = { workspace = true }
 rustacuda = { workspace = true }
 ag-types = { workspace = true }
 ag-cuda-workspace-macro = { workspace = true }
-ec-gpu-proxy = {workspace = true}
 
-ark-bls12-381 = "0.4.0"
 ark-ec = "0.4.2"
 ark-ff = "0.4.2"
 ark-std = { version = "0.4.0", features = ["getrandom"] }
+
+ark-bls12-381 = { version = "0.4", optional = true }
+ark-bn254 = { version = "0.4", optional = true }
+
 
 once_cell = "1.19"
 
 [dev-dependencies]
 ark-poly = { version = "0.4.0", features = ["parallel"] }
 ark-ec = { version = "0.4.2", features = ["parallel"] }
-ag-cuda-proxy = { workspace = true }
-rayon = "*"
+rayon = "1.10"
 
 
 [build-dependencies]
 ag-build = { workspace = true, features = ["cuda"] }
-ark-bls12-381 = "0.4.0"
+ark-bls12-381 = "0.4"
+ark-bn254 = "0.4"
+
+[features]
+default = ["bn254"]
+bn254 = ["ark-bn254"]
+bls12-381 = ["ark-bls12-381"]
+
+[[bench]]
+name = "ec_fft"
+harness = false
+
+[[bench]]
+name = "multiexp"
+harness = false
+
+[[bench]]
+name = "amt"
+harness = false
